--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@babel/runtime-corejs3": "^7.22.9",
     "luxon": "^3.2.1",
     "object-hash": "^3.0.0",
-    "plotly.js-dist": "^2.34.0"
+    "plotly.js-dist": "^2.34.0",
+    "pbkdf2": "3.1.3",
+    "form-data": "4.0.4"
   },
   "resolutions": {
     "@types/react": "^16.9.8",
