--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "glob-parent": "^6.0.0",
     "@babel/helpers": "^7.22.9",
     "@babel/runtime": "^7.22.9",
-    "@babel/runtime-corejs3": "^7.22.9"
+    "@babel/runtime-corejs3": "^7.22.9",
+    "pbkdf2": "^3.1.3"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.17.1",
