--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "json5": "^2.2.3",
     "@babel/core": "^7.20.12",
     "@babel/traverse": "^7.20.12",
-    "@cypress/request": "^3.0.0",
+    "@cypress/request": "^3.0.9",
     "braces": "3.0.3",
     "micromatch": "4.0.8",
     "cross-spawn": "7.0.5",
@@ -59,7 +59,8 @@
     "@babel/helpers": "^7.22.9",
     "@babel/runtime": "^7.26.10",
     "@babel/runtime-corejs3": "^7.22.9",
-    "pbkdf2": "3.1.5"
+    "pbkdf2": "3.1.5",
+    "form-data": "4.0.4"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.1",
