--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "@babel/runtime": "^7.22.9",
     "@babel/runtime-corejs3": "^7.22.9",
     "pbkdf2": "3.1.5",
-    "form-data": "4.0.4"
+    "form-data": "4.0.4",
+    "sha.js": "^2.4.12"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.17.1",
