--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "@babel/runtime-corejs3": "^7.22.9",
     "pbkdf2": "3.1.5",
     "form-data": "4.0.4",
-    "sha.js": "^2.4.12"
+    "sha.js": "^2.4.12",
+    "min-document": "^2.19.1"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.1",
