--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "pbkdf2": "3.1.5",
     "form-data": "4.0.4",
     "sha.js": "^2.4.12",
-    "min-document": "^2.19.1"
+    "min-document": "^2.19.1",
+    "js-yaml": "^4.1.1"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.1",
